RestaurantManagement/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Food_Quality__c</fullName>
        <label>Food Quality</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Experience__c</fullName>
        <label>Overall Experience</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_I_liked__c</fullName>
        <label>What I liked</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_must_have_been_there__c</fullName>
        <label>What must have been there</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>